<resources>
    <string name="app_name">DotBu</string>
    <string name="hint_email">Email o usuario</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Acceder</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_olvide">olvidé mi contraseña</string>
    <string name="title_activity_botones">botones</string>
    <string name="Pacientes">Pacientes</string>
    <string name="Citas">Citas</string>
    <string name="Medicamentos">Medicamentos</string>
    <string name="Modificar">Modificar</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Añadir">Añadir</string>
    <string name="Lista_med">Lista medicamentos</string>
    <string name="Paciente">Paciente</string>
    <string name="namePaciente">Nombre Paciente</string>
    <string name="CedulaPaciente">Cedula Paciente</string>
    <string name="CumpPaciente">cumpPaciente</string>
    <string name="addiconPaciente">adjuntar icono \n del Paciente</string>
    <string name="CrearPaciente">Crear Paciente</string>
    <string name="CrearnuevoPaciente">Crear Paciente</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="CantHora">Intervalo de tiempo en horas entre medicamento</string>
    <string name="title_activity_maps_pacient">MapsActivityPacient</string>
    <string name="title_activity_geofence">Geofence</string>
    <string name="title_activity_add_geo_fence">AddGeoFence</string>


    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
</resources>