<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".servicioPaciente.Controler.Crear"
    android:background="@drawable/botonmaps2">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/namePaciente"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9A999A"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/CedulaPaciente"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#9A999A"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addImage"
        android:layout_width="245dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded2"
        android:text="@string/addiconPaciente"
        android:textColor="@color/white"
        android:textSize="17.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ProgressBar
        android:id="@+id/upload_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/button3"
        android:layout_width="271dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded2"
        android:text="@string/CrearPaciente"
        android:textColor="@color/white"
        android:textSize="17.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="?android:spinnerStyle"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_marginTop="88dp"
        android:text="Enero 30 2001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:textColor="#000000"
        android:textColorHint="#9A999A"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImage"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Seleccionar Cumpleaños"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>