<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallbase3"
    tools:context=".servicioPaciente.Controler.Botones">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location"
        android:layout_width="136dp"
        android:layout_height="417dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/round3"
        android:drawableTop="@drawable/location_ic"
        android:gravity="center"
        android:paddingTop="170dp"
        android:paddingBottom="170dp"
        android:text="@string/Ubicacion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cita"
        android:layout_width="157dp"
        android:layout_height="130dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/round3"
        android:text="@string/Citas"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableTop="@drawable/cita_ic"
        android:gravity="center"
        android:paddingTop="20dp"
        android:visibility="gone"
        android:paddingBottom="30dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/medicamento"
        android:layout_width="157dp"
        android:layout_height="130dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/round3"
        android:drawableTop="@drawable/medicamento_ic"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/Medicamentos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cita" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageView4c"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"

        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify"
        android:layout_width="157dp"
        android:layout_height="130dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round3"
        android:drawableTop="@drawable/modificar_ic"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/Modificar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicamento"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/NomP"
        android:layout_width="192dp"
        android:layout_height="129dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4c"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>