<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="273dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:text="Acceder"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="275dp"
        android:layout_height="63dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:shadowColor="#000000"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorHint="#8F8989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/upload_progress_bar2"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="275dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="#8F8989"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="#F3A2E5"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_progress_bar2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="Olvidé mi Contraseña"
        android:textAllCaps="false"
        android:textColor="#F3A2E5"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena" />

</androidx.constraintlayout.widget.ConstraintLayout>